# chess_arena

./: .gitignore  README.md  minimax_test.py  requirements.txt  run.py
agents/human/: agent.py
agents/minimax/: agent.py
agents/random/: agent.py
agents/stockfish/: agent.py
agents/transformer/: agent.py  create_vocab.py  data_utils.py  prepare_data.py  test.ipynb  test_run.py  train.py  vocab.pickle
agents/transformer/data_collection/: Cargo.toml  pgn_parser.c  test.pgn  unzip.c  unzip.orig.c  unzip1.c
agents/transformer/data_collection/old/: collector1.c  collector2.c  downloader.c  unzip.c
agents/transformer/data_collection/src/: main.rs
