[package]
name = "data_collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bytes = "1.5.0"
pgn-reader = "0.25.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = "1.0.197"
serde_json = "1.0.114"
shakmaty = "0.26.0"
tempdir = "0.3.7"
tokio = { version = "1.36.0", features = ["full"] }
zip = "0.6.6"
